Fix specfile and -version-info libtool flag

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am 397 2005-07-07 01:08:14Z dun $
+## $Id$
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -11,8 +11,8 @@ lib_LTLIBRARIES = \
 	libedac.la
 
 libedac_la_LDFLAGS = \
-	--export-symbols-regex "^edac_.*" \
-	--version-info $(META_LT_CURRENT):$(META_LT_REVISION):$(META_LT_AGE)
+	-export-symbols-regex "^edac_.*" \
+	-version-info $(META_LT_CURRENT):$(META_LT_REVISION):$(META_LT_AGE)
 
 libedac_la_LIBADD = \
 	$(LIBSYSFS_LIBS)
