--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -198,8 +198,8 @@ lib_LTLIBRARIES = \
 	libedac.la
 
 libedac_la_LDFLAGS = \
-	--export-symbols-regex "^edac_.*" \
-	--version-info $(META_LT_CURRENT):$(META_LT_REVISION):$(META_LT_AGE)
+	-export-symbols-regex "^edac_.*" \
+	-version-info $(META_LT_CURRENT):$(META_LT_REVISION):$(META_LT_AGE)
 
 libedac_la_LIBADD = \
 	$(LIBSYSFS_LIBS)
