--- a/config.h.in
+++ b/config.h.in
@@ -24,6 +24,9 @@
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
 
+/* Define to 1 if libsysfs has sysfs_open_device_tree. */
+#undef HAVE_SYSFS_OPEN_DEVICE_TREE
+
 /* Define to 1 if you have the <sys/stat.h> header file. */
 #undef HAVE_SYS_STAT_H
 
@@ -32,9 +35,6 @@
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
-
-/* Define to 1 if libsysfs-2.0 */
-#undef LIBSYSFS_2_0
 
 /* Define the project alias string (name-ver or name-ver-rel). */
 #undef META_ALIAS
