Build edac-ctl script from edac-ctl.in so that prefix and sysconfdir are properly expanded.

--- a/Makefile.in
+++ b/Makefile.in
@@ -40,7 +40,7 @@ host_triplet = @host@
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(top_srcdir)/configure AUTHORS COPYING ChangeLog INSTALL NEWS \
-	config/config.guess config/config.sub config/depcomp \
+	TODO config/config.guess config/config.sub config/depcomp \
 	config/install-sh config/ltmain.sh config/missing
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
