- Fixes for 'make distcheck' - Build src/etc/edac.init from edac.init.in in order to substitute   configure time parameters. - Distribute META file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,9 @@
 ACLOCAL_AMFLAGS =               -I config
 CONFIG_STATUS_DEPENDENCIES =    META
 EXTRA_DIST =                    AUTHORS COPYING ChangeLog DISCLAIMER \
-                                INSTALL NEWS README edac-utils.spec
+                                INSTALL NEWS README edac-utils.spec META
 SUBDIRS =                       src
 
 distclean-local:
 	-rm -fr autm4te*.cache autoscan.* aclocal.m4
+	-rm -fr $(META_NAME)-*
