--- a/Makefile.in
+++ b/Makefile.in
@@ -188,7 +188,7 @@ target_alias = @target_alias@
 ACLOCAL_AMFLAGS = -I config
 CONFIG_STATUS_DEPENDENCIES = META
 EXTRA_DIST = AUTHORS COPYING ChangeLog DISCLAIMER \
-                                INSTALL NEWS README edac-utils.spec
+                                INSTALL NEWS README edac-utils.spec META
 
 SUBDIRS = src
 all: config.h
@@ -379,7 +379,7 @@ distclean-tags:
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkdir_p) $(distdir)/config $(distdir)/src/lib $(distdir)/src/util
+	$(mkdir_p) $(distdir)/config $(distdir)/src/etc $(distdir)/src/lib $(distdir)/src/util
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
@@ -618,6 +618,7 @@ uninstall-info: uninstall-info-recursive
 
 distclean-local:
 	-rm -fr autm4te*.cache autoscan.* aclocal.m4
+	-rm -fr $(META_NAME)-*
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
