--- a/src/util/edac-ctl.in
+++ b/src/util/edac-ctl.in
@@ -202,7 +202,7 @@ sub parse_driver_db
 
 sub find_edac_driver
 {
-    my $cmd = "/sbin/lspci -n";
+    my $cmd = $lspci . ' -n';
     my $driver = "";
 
     parse_driver_db();
