--- a/src/etc/Makefile.am
+++ b/src/etc/Makefile.am
@@ -6,19 +6,20 @@
 
 EXTRA_DIST = \
 	labels.db \
-	driver.db \
-	edac.init
+	udev.rules.in \
+	edac.init.in
 
 install-data-local:
 	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/init.d"; \
 	$(INSTALL) -m 755 $(srcdir)/edac.init \
 	    "$(DESTDIR)$(sysconfdir)/init.d/edac"; \
+	$(INSTALL) -m 644 -D $(srcdir)/udev.rules \
+	    "$(DESTDIR)/etc/udev/rules.d/60-edac-utils.rules"; \
 	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/edac/"; \
-	$(INSTALL) -m 644 $(srcdir)/driver.db $(srcdir)/labels.db \
-	    "$(DESTDIR)$(sysconfdir)/edac/"; 
+	$(INSTALL) -m 644 $(srcdir)/labels.db "$(DESTDIR)$(sysconfdir)/edac/"; 
 
 uninstall-local:
 	-rm -f "$(DESTDIR)$(sysconfdir)/init.d/edac"
 	-rm -f "$(DESTDIR)$(sysconfdir)/edac/labels.db"
-	-rm -f "$(DESTDIR)$(sysconfdir)/edac/driver.db"
+	-rm -f "$(DESTDIR)$(sysconfdir)/udev/rules.d/60-edac-utils.rules"
 	-rmdir "$(DESTDIR)$(sysconfdir)/edac" 2>/dev/null
