Allow edac-utils to properly build out of tree.
This patch allows edac-utils to be correctly built and installed
out-of-tree.

Signed-off-by: Grant Erickson <gerickson@nuovations.com>
---

This patch has been tested on both i686-pc-linux-gnu and
powerpc-4xx-linux-gnu both in-tree and out-of-tree. Implicit with the patch
is re-running aclocal, autoconf and automake to update the distribution.

--- a/src/etc/Makefile.am
+++ b/src/etc/Makefile.am
@@ -11,7 +11,7 @@ EXTRA_DIST = \
 
 install-data-local:
 	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/init.d"; \
-	$(INSTALL) -m 755 $(srcdir)/edac.init \
+	$(INSTALL) -m 755 $(builddir)/edac.init \
 	    "$(DESTDIR)$(sysconfdir)/init.d/edac"; \
 	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/edac/"; \
 	$(INSTALL) -m 644 $(srcdir)/labels.db "$(DESTDIR)$(sysconfdir)/edac/"; 
