Remove $(builddir) from source path to edac.init.
builddir doesn't seem to be defined in the version of
automake/autoconf used with edac-utils.

--- a/src/etc/Makefile.in
+++ b/src/etc/Makefile.in
@@ -330,7 +330,7 @@ uninstall-am: uninstall-info-am uninstall-local
 
 install-data-local:
 	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/init.d"; \
-	$(INSTALL) -m 755 $(builddir)/edac.init \
+	$(INSTALL) -m 755 edac.init \
 	    "$(DESTDIR)$(sysconfdir)/init.d/edac"; \
 	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/edac/"; \
 	$(INSTALL) -m 644 $(srcdir)/labels.db "$(DESTDIR)$(sysconfdir)/edac/"; 
