--- a/src/util/edac-ctl.in
+++ b/src/util/edac-ctl.in
@@ -30,7 +30,7 @@ use Getopt::Long;
 
 my $prefix      = "@prefix@";
 my $sysconfdir  = "@sysconfdir@";
-my $dmidecode   = find_prog ("dmidecode") or exit (1);
+my $dmidecode   = find_prog ("dmidecode");
 my $modprobe    = find_prog ("modprobe")  or exit (1);
 
 my %conf        = ();
@@ -392,7 +392,7 @@ sub find_prog
     for my $dir ("/sbin", "/usr/sbin", split ':', $ENV{PATH}) {
         return "$dir/$file" if -x "$dir/$file";
     }
-    log_error ("Failed to find $file in PATH\n");
+    # log_error ("Failed to find $file in PATH\n");
     return "";
 }
 
