--- a/src/util/edac-ctl.8.in
+++ b/src/util/edac-ctl.8.in
@@ -45,8 +45,9 @@ Display a brief usage message.
 .TP
 .BI "--mainboard"
 Print mainboard vendor and model for this hardware, if available.
-This option requires that the \fBdmidecode\fR(8) utility be installed,
-and must be run as root.
+The method used by \fBedac-ctl\fR to obtain the mainboard vendor
+and model information for the current system is described below
+in the \fIMAINBOARD CONFIGURATION\fR section.
 .TP
 .BI "--status"
 Print the status of EDAC drivers (loaded or unloaded).
@@ -65,6 +66,44 @@ well as the current labels registered with EDAC.
 .TP
 .BI "--labeldb="DB
 Specify an alternate location for the labels database.
+
+.SH MAINBOARD CONFIGURATION
+.PP
+The \fBedac-ctl\fR script uses the following method to determine the
+current system's mainboard vendor and model information:
+
+.IP "1." 4
+If the config file @sysconfdir@/edac/mainboard exists, then it is
+parsed by \fBedac-ctl\fR. The mainboard config file has the following
+simple syntax:
+.nf
+
+       vendor = <mainboard vendor string>
+       model =  <mainboard model string>
+       script = <script to gather mainboard information>
+
+.fi
+Where anything after a '#' character on a line is considered a comment.
+If the keyword \fBscript\fR is specified, then that script or
+executable is run by \fBedac-ctl\fR to gather the mainboard vendor
+and model information. The script should write the resulting information
+on stdout in the same format as the mainboard config file.
+
+.IP "2."
+If no mainboard config file exists, then \fBedac-ctl\fR will attempt
+to read DMI information from the sysfs files
+.nf
+
+     /sys/class/dmi/id/board_vendor
+     /sys/class/dmi/id/board_name
+
+.fi
+
+.IP "3."
+If the sysfs files above do not exist, then \fBedac-ctl\fR will fall
+back to parsing output of the \fBdmidecode\fR(8) utility. Use of this
+utility will most often require that \fBedac-ctl\fR be run as root.
+.EL
 
 .SH SEE ALSO
 \fBedac\fR(3), \fBedac-util\fR(1)
